package com.greentree.engine.moon.render.material;


public interface Property {
	
	void bind(PropertyLocation location);
	
}

